...
                    TaskAppAppBar(
                        currentScreenTitle = currentScreenTitle,
                    )
                },
                floatingActionButton = {
                    FloatingActionButton(onClick = { isAddNewVisible = !isAddNewVisible }) {
                        Icon(Icons.Default.Add, contentDescription = "Add")
                    }
                },
                // modifier = Modifier.padding(dimensionResource(id = R.dimen.drawer_width), 0.dp, 0.dp, 0.dp )
            ) { innerPadding ->

                navComponent(
...
